# pgscat

./: .gitignore  README.md  main.py  pgsapi_client.py  pyproject.toml
scripts/: aggregate_prs.py  build_betamap_and_load_duckdb.py  build_betamap_and_load_duckdb.run.sh  build_position_map.py  build_variants_from_zarr.py  compute_prs.py  download_pgs_scores.sh  grch38_column_inventory.jsonl  inspect_score_columns.py  inspect_score_columns.run.sh  pgsids-cancer-v2.txt  run_prs.slurm  sbatch_run_pgs_slurm.sh  score_prs_zarr.py
src/pgscat/: common_utils.py  pgsclient.py
src/pgscat/.ipynb_checkpoints/: make_trait_category_pie_app-checkpoint.py  trait_plots_app-checkpoint.py
tests/: test_file_parser.py  test_query_fasta.py
