[project]
name = "pgscat"
version = "0.1.0"
description = "Query PGSCatalog API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]
license = "Unlicense"

[project.scripts]
pgscat = "pgscat.pgsclient:cli_main"

[dependency-groups]
dev = [
    "pandas>=3.0.1",
    "anywidget>=0.9.21",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "plotly>=6.6.0",
    "duckdb>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgscat"]
